--- a/src/index.html
+++ b/src/index.html
@@ -13,42 +13,49 @@
 <body>
 <main class="container-fluid">
   <div class="row justify-content-center text-center">
-    <div class="col-12 m-3" id='header'>
-      <p class="p-3">
-        <span class="display-4">This Is The Great</span>
+    <div class="col" id='header'>
+      <!-- <p class=""> -->
+        <span>This Is The Great</span>
         <br>
-        <span class="display-3" id='title'>RGB (0,0,0)</span>
+        <span id='title'>RGB (0,0,0)</span>
         <br>
-        <span class="display-4">Guessing Game</span>
-      </p>
-    </div>
-    <nav class="col-12 navbar navbar-expand-sm navbar-light bg-light mt-5">
-        <div class="container">
-          <ul class="navbar-nav justify-content-center m-auto">
-            <li class="nav-item px-5">
-                <a class="nav-link"href="#" id='newgame'>New Game</a>
-            </li>
-            <li class="nav-item px-5">
-                <a class="nav-link" href="#" id='easymode'>Easy Mode</a>
-            </li>
-            <li class="nav-item px-5">
-                <a class="nav-link" href="#" id="hardmode">Hard Mode</a>
-            </li>
-        </ul>
-      </div>
-    </nav>
-    <div class="col-10 row justify-content-center">
-      <div class="col-6 row justify-content-center">
-        <div id='text' class="col-12 text-center mt-2">Pick the right box</div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-        <div class="col-md-3"></div>
-      </div>
+        <span>Guessing Game</span>
+      <!-- </p> -->
     </div>
   </div>
+<div class="row d-block justify-content-center text-center">
+  <nav class="col-12 navbar navbar-expand-md navbar-light bg-light">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav justify-content-center m-auto">
+          <li class="nav-item px-5">
+              <a class="nav-link"href="#" id='newgame'>New Game</a>
+          </li>
+          <li class="nav-item px-5">
+              <a class="nav-link" href="#" id='easymode'>Easy Mode</a>
+          </li>
+          <li class="nav-item px-5">
+              <a class="nav-link" href="#" id="hardmode">Hard Mode</a>
+          </li>
+      </ul>
+    </div>
+  </nav>
+</div>
+<div id='text' class="col-12 text-center pt-4">Pick the right box</div>
+<div id="squares" class="row m-auto pt-4 justify-content-center">
+  <!-- <div class="col-6 row"> -->
+    <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
+    <div class="col-md-3"></div>
+  <!-- </div> -->
+</div>
+
 </main>
   <script type="text/javascript" src="js/color.js"></script>
   <script type="text/javascript" src="js/jquery.min.js"></script>
